--- a/shopping_mall/lib/shopping_mall_web/templates/cart/cart_index.html.eex
+++ b/shopping_mall/lib/shopping_mall_web/templates/cart/cart_index.html.eex
@@ -1,1 +1,5 @@
 Items: <%= @cart.count %>
+
+<%=form_for @conn, Routes.cart_path(@conn, :update), method: "post"%>
+  <%= submit "+", name: "action", value: "add" %>
+</form>
